// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceSearch Component Lat/Lon should render correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div>
      <div>
        <button
          className=""
          id="name"
          onClick={[Function]}
          type="button"
        >
          Place Name
        </button>
        <button
          className="active"
          id="latlon"
          onClick={[Function]}
          type="button"
        >
          Lat/Lon
        </button>
      </div>
      <input
        name="lat"
        onChange={[Function]}
        placeholder="Latitude"
        type="text"
        value=""
      />
      <input
        name="lon"
        onChange={[Function]}
        placeholder="Longitude"
        type="text"
        value=""
      />
      <input
        style={
          Object {
            "display": "none",
          }
        }
        type="submit"
      />
    </div>
  </form>
</div>
`;

exports[`PlaceSearch Component Place Name should render correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div>
      <div>
        <button
          className="active"
          id="name"
          onClick={[Function]}
          type="button"
        >
          Place Name
        </button>
        <button
          className=""
          id="latlon"
          onClick={[Function]}
          type="button"
        >
          Lat/Lon
        </button>
      </div>
      <input
        name="name"
        onChange={[Function]}
        placeholder="Place Name"
        type="text"
        value=""
      />
    </div>
  </form>
</div>
`;
